# serial_mcp

./: LICENSE  README.md  pyproject.toml  serial_mcp.config.json  start-serial-mcp.bat
src/serial_mcp/: __init__.py  config_loader.py  cursor_config.py  models.py  serial_manager.py  server.py
src/serial_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
